scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/checkJsdocTypedefOnlySourceFile.errors.txt
0.js(6,21): error TS1003: Identifier expected.
0.js(10,12): error TS2503: Cannot find namespace 'exports'.


==== 0.js (2 errors) ====
    // @ts-check
    
    var exports = {};
    
    /**
     * @typedef {string}
                        
     */
    
!!! error TS1003: Identifier expected.
    exports.SomeName;
    
    /** @type {exports.SomeName} */
               ~~~~~~~
!!! error TS2503: Cannot find namespace 'exports'.
    const myString = 'str';
    